# VideoGen

./: .gitignore  Coquis.py  MainV1.py  NewsProcessor.py  ScrapperV1.py  ScrapperV2.py  TalkerV1.py  afine.py  audio_generator.py  config.py  data.db  duck.py  main.py  news_processor.py  presentacion.py  presentacion_ISO_27000.pptx  pyproject.toml  requirements.txt  search_results.json  video_generator.py  voice cloner.py
Generator/: main.py
Generator/AiServices/: AiScriptWriter.py
Generator/Controller/: ScriptsController.py
Generator/Database/: Manager.py
Generator/Models/: Script.py
audio_output/: generation_log_20250415_203908.txt  generation_log_20250416_160426.txt  generation_log_20250421_215721.txt
core/: models.py  pipeline.py
extraction/: test.py
modules/extraction/: NewsContentExtractor.py  test2.py
modules/search/: NewsFinder.py  duckduckgo.py  main.py
search/: GetNews.py  NewsFinder.py  bing.py  google.py  main.py  news_search.db  yahoo.py
services/: ai_service.py  database_manager.py
video_output/: video_generation_log_20250421_220945.txt  video_generation_log_20250421_225337.txt  video_generation_log_20250421_232458.txt  video_generation_log_20250421_234636.txt
video_output/temp_10/: image_list.txt
video_output/temp_12/: image_list.txt
video_output/temp_8/: image_list.txt
video_output/temp_9/: image_list.txt
video_output/temp_combine/: concat_list.txt
