[project]
name = "videogen"
version = "0.1.0"
description = ""
authors = [
    {name = "alejandro bernal\\"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "tts (>=0.22.0,<0.23.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
    "ffmpeg (>=1.4,<2.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "readability (>=0.3.2,<0.4.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "ddgs (>=9.4.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
